test : 회원가입, 로그인 테스트 코드 추가